--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
     "@prisma/client": "^4.14.1",
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "babel-plugin-inline-react-svg": "^2.0.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
