--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
+  "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
     "@prisma/client": "^4.14.1",
     "@svgr/webpack": "^8.0.1",
-    "@types/node": "20.2.3",
+    "@types/node": "^20.2.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -26,6 +30,10 @@
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/next-pwa": "^5.6.4"
   }
 }
