--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.14.1",
     "@svgr/webpack": "^8.0.1",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^20.2.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -23,6 +26,8 @@
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.4.3",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.23",
