--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/next-pwa": "^5.6.4"
