--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
+    "text-encoding": "^0.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
