--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run reset && next build",
     "start": "next start",
     "lint": "next lint",
     "reset": "prisma db push --force-reset && prisma db seed"
