--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "devv": "concurrently \"pnpm run dev\" \"pnpm run studio\"",
+    "studio": "prisma studio",
     "build": "npm run reset && next build",
     "start": "next start",
     "lint": "next lint",
@@ -25,6 +27,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "concurrently": "^8.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "multer": "^1.4.5-lts.1",
