--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-s3": "^3.335.0",
     "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.15.0",
+    "@react-google-maps/api": "^2.18.1",
     "@svgr/webpack": "^8.0.1",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
