--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
+    "square": "^27.0.0",
     "tailwindcss": "3.3.2",
     "text-encoding": "^0.7.0",
     "ts-node": "^10.9.1",
