--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   "prisma": {
     "seed": "node prisma/seed.mjs"
   },
-
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.15.0",
     "@react-google-maps/api": "^2.18.1",
     "@svgr/webpack": "^8.0.1",
-    
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "framer-motion": "^10.12.16",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "next": "13.4.3",
@@ -34,21 +36,22 @@
     "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "sharp": "^0.32.1",
     "square": "^27.0.0",
     "tailwindcss": "3.3.2",
-    "text-encoding": "^0.7.0", 
+    "text-encoding": "^0.7.0",
     "util": "^0.12.5"
   },
   "devDependencies": {
-    "@types/next-pwa": "^5.6.4",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
+    "@types/next-pwa": "^5.6.4",
     "@types/node": "^20.2.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "concurrently": "^8.0.1",
-    "typescript": "^5.0.4",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
