--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^4.15.0",
     "@react-google-maps/api": "^2.18.1",
     "@svgr/webpack": "^8.0.1",
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.41.0",
@@ -41,7 +42,8 @@
     "square": "^27.0.0",
     "tailwindcss": "3.3.2",
     "text-encoding": "^0.7.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/multer": "^1.4.7",
