--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/uuid": "^9.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.12.16",
