--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@next/bundle-analyzer": "^13.4.4",
     "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.15.0",
     "@react-google-maps/api": "^2.18.1",
