--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "devv": "concurrently \"pnpm run dev\" \"pnpm run studio\"",
     "studio": "prisma studio",
-    "build": "npm run reset && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "reset": "prisma db push --force-reset && prisma db seed"
